prusti-tests/tests/verify/ui/ghost-constraints/invalid-trait-refinement-1.stderr
error: [Prusti: verification error] the method's precondition may not be a valid weakening of the trait's precondition.
  --> $DIR/invalid-trait-refinement-1.rs:18:30
   |
18 |       #[ghost_constraint(Self: HasContract, [
   |  ______________________________^
19 | |         requires(self.pre()), ensures(self.post())
   | |___________________________^
...
30 |       #[requires(self.x >= 15)]
   |                  ^^^^^^^^^^^^
   |
   = help: The trait's precondition should imply the implemented method's precondition.

error: aborting due to previous error

